--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "framer-motion": "^11.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "react-icons": "^5.4.0",
+    "styled-components": "^6.1.13",
+    "@fortawesome/fontawesome-free": "6.2.1",
+    "@fortawesome/fontawesome-svg-core": "6.2.1",
+    "@fortawesome/free-regular-svg-icons": "6.2.1",
+    "@fortawesome/free-solid-svg-icons": "6.2.1",
+    "@fortawesome/react-fontawesome": "0.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
